# utfprct-tex

code/: CMakeLists.txt  bitonic.c  bitonic_sort.cpp  cta.cpp  cta.nop  ex_poo.cpp  ex_pp.cpp  forest.cpp  lambda.cpp  sensor.clj  vivado.c
code/Cpp-Framework-4_0/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  libnop.pc.in  libnopConfig.cmake.in
code/Cpp-Framework-4_0/include/: NOPFramework.h
code/Cpp-Framework-4_0/include/libnop/: action.h  attribute.h  condition.h  fbe.h  instigation.h  logger.h  observable.h  observer.h  premise.h  rule.h  scheduler.h
code/Cpp-Framework-4_0/libnop_gbench/: CMakeLists.txt
code/Cpp-Framework-4_0/libnop_gbench/include/: random_forest_vivado.h  test.h  test_fw2.h  test_random_forest.h
code/Cpp-Framework-4_0/libnop_gbench/src/: test.cpp  test_fw2.cpp
code/Cpp-Framework-4_0/libnop_gtest/: test.cpp
code/Cpp-Framework-4_0/src/: attribute.cpp  condition.cpp  fbe.cpp  logger.cpp  observer.cpp  premise.cpp  scheduler.cpp
code/framework/: LICENSE
code/framework/include/: NOPFramework.h
code/framework/include/libnop/: action.h  attribute.h  condition.h  definitions.h  fbe.h  framework.h  instigation.h  logger.h  observable.h  observer.h  premise.h  rule.h  scheduler.h
code/framework/libnop_gbench/: CMakeLists.txt
code/framework/libnop_gbench/include/: random_forest_vivado.h  semaphore_cbcl.h  semaphore_cta.h  test.h  test_fw2.h  test_random_forest.h
code/framework/libnop_gbench/src/: random_forest_vivado.cpp  semaphore_cbcl.cpp  semaphore_cta.cpp  test.cpp
code/framework/libnop_gtest/: CMakeLists.txt  test.cpp
code/framework/src/: action.cpp  instigation.cpp  observable.cpp  premise.cpp  rule.cpp
code/include/: Action.h  Attribute.h  BasePremise.h  Condition.h  Definitions.h  Instigation.h  NOPEntity.h  NOPFramework.h  Observable.h  Observer.h  Premise.h  Rule.h
code/include/libnop/: action.h  attribute.h  condition.h  definitions.h  fbe.h  framework.h  instigation.h  logger.h  observable.h  observer.h  premise.h  rule.h  scheduler.h
code/libnop_gbench/: CMakeLists.txt  test.cpp  test.h
code/libnop_gtest/: CMakeLists.txt  test.cpp
code/src/: Action.cpp  Condition.cpp  Instigation.cpp  Observable.cpp  Observer.cpp  Premise.cpp  Rule.cpp  scheduler.cpp
data/: benchmark.xlsx  bitonic_bench.data  bitonic_nop.data  cta.data  mira_alvo.data  random_forest.data  revisao.xlsx  sensor_bench.data
diagrams/: class_diagram.wsd  class_diagram_nop.wsd  class_diagram_nop4.wsd  class_fw4.mdj  compact.mdj  fbe_rule.wsd  master_rule.wsd  nop_fw4.wsd  nop_fw4_observer.wsd  renotification.wsd  rule_renotif.wsd  rule_sensor.wsd  rules_example.wsd  shared_premises.wsd  tdd.wsd
extra/: ata.html
extra/ata_files/: print01.css  print02.css
figures/: classificacao.xcf  classificacao_cut.xcf  classificacao_cut2.xcf  classificacao_cut3.xcf  evolucao.xcf  fw2_mem2.xcf
utfprct-tex/: artigos.csv  artigos.tex  conclusao.tex  data.csv  desenvolvimento.tex  introducao.tex  listas.tex  pos_texto.tex  pre_ei.tex  pre_texto.tex  referencias.bib  resultados.tex  revisao.tex  teses_dissertacoes.csv  teses_dissertacoes.tex  utfprct-dados.tex  utfprct.cls  utfprct.fdb_latexmk  utfprct.fls  utfprct.lol  utfprct.tex
utfprct-tex/PosTexto/: apendiceb.tex  referencias.bib
utfprct-tex/PreTexto/: abstract.tex  agradecimentos.tex  dedicatoria.tex  epigrafe.tex  resumo.tex
